[gd_scene load_steps=3 format=3 uid="uid://by8ljrxw06xim"]

[ext_resource type="Script" path="res://Scenes & Scripts/UI/Start_level/start_menu.gd" id="1_jj50q"]
[ext_resource type="AudioStream" uid="uid://dylabalex4ves" path="res://Assets/Audio/SFX/menu_button_click.wav" id="2_mlure"]

[node name="Start_Menu" type="CanvasLayer"]
script = ExtResource("1_jj50q")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Shop" type="Button" parent="Control/MarginContainer/ShopContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Shop"

[node name="OptionsContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Options" type="Button" parent="Control/MarginContainer/OptionsContainer"]
layout_mode = 2
text = "Options"

[node name="ButtonContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Play" type="Button" parent="Control/MarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mlure")
bus = &"SFX"

[connection signal="pressed" from="Control/MarginContainer/ShopContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Control/MarginContainer/OptionsContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/ButtonContainer/Play" to="." method="_on_play_pressed"]
